<resources>
    <string name="app_name">VeGetables</string>
    <string name="itemName">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="expDate">Expiration Date (Estimate)</string>
    <string name="addNewItem">Add New Item</string>
    <string name="addItemButton">Add Item</string>
    <string name="foodPantry1">Food Pantry Name:</string>
    <string name="item1">Item Name:</string>
    <string name="quantity1">Quantity:</string>
    <string name="date1">Date:</string>
    <string name="address1">Address:</string>
    <string name="requests">Requests</string>
    <string name="phoneNumber1">Phone Number:</string>
    <string name="email1">Email:</string>
    <string name="accept1">Accept</string>
    <string name="reject1">Reject</string>


    <string name="current_orders">Current Orders</string>
    <string name="pending_requests_title">Pending Requests</string>
    <string name="confirmed_requests_title">Confirmed Requests</string>
    <string name="pending_requests"></string>
    <string name="confirmed_requests"></string>


    <string name="currentInventory">Current Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="dateAdded">Date Added:</string>
    <string name="expDate2">Expiration Date:</string>
    <string name="pastRequests">Previous Requests</string>
    <string name="title_activity_grocery_store__sign_up">GroceryStore_SignUp</string>
    <string name="vegetables">VeGETables</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password2">Password:</string>
    <string name="username2">Username:</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="makeaccount">Don\'t have an account?</string>
    <string name="welcome_text">Welcome to VeGETables</string>
    <string name="storeemail">Store Contact Email:</string>
    <string name="storecontact">Store Contact Name:</string>
    <string name="storephonenumber">Store Phone Number:</string>
    <string name="storeaddress">Store Address:</string>
    <string name="storename">Store Name:</string>
    <string name="gvss">Are You a Food Pantry or a Grocery Store?</string>
    <string name="grocerystore">Grocery Store</string>
    <string name="foodpantry">Food Pantry</string>
    <string name="info">Information</string>
    <string name="contactname">Contact Name</string>
    <string name="contact_address">Contact Address</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="food_name">Food Name</string>
    <string name="Food_quantity">Food Quantity</string>
    <string name="disclaimer">VeGETables is not responsible  for any delivery of exprired food or miscommunication between any parties.</string>
</resources>
