<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mamabearindustries.vegetables.AcceptActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/requests"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pantry1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:text="@string/foodPantry1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/accept1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="32dp"
        android:text="@string/accept1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber1" />

    <Button
        android:id="@+id/reject1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/reject1"
        app:layout_constraintBaseline_toBaselineOf="@+id/accept1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toEndOf="@+id/accept1" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/item1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantry1" />

    <TextView
        android:id="@+id/quantity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity1"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/pantry1"
        app:layout_constraintTop_toBottomOf="@+id/pantry1" />

    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/date1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email1"
        app:layout_constraintStart_toStartOf="@+id/email1" />

    <TextView
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/address1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1" />

    <TextView
        android:id="@+id/phoneNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/phoneNumber1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/quantity1"
        app:layout_constraintTop_toBottomOf="@+id/quantity1" />

    <TextView
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="13dp"
        android:text="@string/email1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/reject1"
        app:layout_constraintStart_toEndOf="@+id/reject1" />

</android.support.constraint.ConstraintLayout>
