<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mamabearindustries.vegetables.FoodPantry_Orders"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtCurrentOrder"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_orders"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPendingRequests"
        android:layout_width="134dp"
        android:layout_height="27dp"
        android:layout_marginBottom="173dp"
        android:layout_marginStart="16dp"
        android:text="@string/pending_requests"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtConfirmedRequests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentOrder"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtConfirmedRequests"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_marginBottom="204dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirmed_requests"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
