<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mamabearindustries.vegetables.CurrentInventory">

    <TextView
        android:id="@+id/inventory"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="32dp"
        android:text="@string/inventory"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="121dp"
        android:text="@string/currentInventory"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="16dp"
        android:text="@string/item1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterItemName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:text="@string/quantity1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/enterQuantity"
        app:layout_constraintEnd_toEndOf="@+id/enterQuantity" />

    <TextView
        android:id="@+id/dateAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateAdded"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/enterDateAdded"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/expDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="628dp"
        android:text="@string/expDate2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enterExpDate" />

    <EditText
        android:id="@+id/enterItemName"
        android:layout_width="68dp"
        android:layout_height="20dp"
        android:layout_marginBottom="643dp"
        android:layout_marginEnd="96dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enterQuantity"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/enterQuantity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/expDate"
        app:layout_constraintEnd_toStartOf="@+id/enterDateAdded"
        app:layout_constraintStart_toEndOf="@+id/enterItemName"
        app:layout_constraintTop_toBottomOf="@+id/currentInventory" />

    <EditText
        android:id="@+id/enterDateAdded"
        android:layout_width="101dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/expDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterExpDate"
        android:layout_width="101dp"
        android:layout_height="25dp"
        android:layout_marginBottom="619dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/enterDateAdded"
        app:layout_constraintTop_toBottomOf="@+id/enterDateAdded"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/addNewItem"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/expDate"
        app:layout_constraintTop_toBottomOf="@+id/expDate" />

</android.support.constraint.ConstraintLayout>
